--- a/http/public/index.html
+++ b/http/public/index.html
@@ -1,16 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Flávio Leonardo Machado de Pádua</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+    <link rel="stylesheet" href="https://translate.googleapis.com/translate_static/css/translateelement.css" />
+    <link rel="stylesheet" href="style.css" />
+
+    <script type="text/javascript" charset="UTF-8"
+        src="https://translate.googleapis.com/_/translate_http/_/js/k=translate_http.tr.pt_BR.Jn3g5zlUG2w.O/am=Bg/d=1/exm=el_conf/ed=1/rs=AN8SPfpd_pRtaSwBLfjX4KMT05UeGhD3pg/m=el_main"></script>
 </head>
+
 <body>
-    <h1>OLA</h1>
-    <h1>OLA</h1>
-    <h1>OLA</h1>
-    <h1>OLA</h1>
-    <h1>OLA</h1>
+    <main class="container d-flex container-curriculum">
+
+
+
+
+        <iframe id=":2.container" class="goog-te-banner-frame skiptranslate" frameborder="0" src="javascript:''"
+            style="visibility:visible"></iframe>
+
+
+
+        <div id=":0.targetLanguage" class="goog-te-gadget-simple" style="white-space: nowrap;"><img
+                src="https://www.google.com/images/cleardot.gif" class="goog-te-gadget-icon" alt=""
+                style="background-image: url(&quot;https://translate.googleapis.com/translate_static/img/te_ctrl3.gif&quot;); background-position: -65px 0px;"><span
+                style="vertical-align: middle;"><a aria-haspopup="true" class="goog-te-menu-value"
+                    href="javascript:void(0)"><span>Português</span><img
+                        src="https://www.google.com/images/cleardot.gif" alt="" width="1" height="1"><span
+                        style="border-left: 1px solid rgb(187, 187, 187);">&ZeroWidthSpace;</span><img
+                        src="https://www.google.com/images/cleardot.gif" alt="" width="1" height="1"><span
+                        aria-hidden="true" style="color: rgb(155, 155, 155);">▼</span></a></span></div>
+
+        <section class="infoPersonal-container">
+            <div class="Personal d-flex">
+                <div class="profile-img">
+                    <img class="profile-img" src="https://cdn-icons-png.flaticon.com/512/17/17004.png">
+                </div>
+                <div class="h4 fw-b">FLAVIO LEONARDO MACHADO DE PADUA</div>
+                <!--DADOS PESSOAIS-->
+                <div class="personalDate">
+                    <div class="h5 fw-b">DADOS PESSOAIS</div>
+                    <div class="personalDate-info fw-b">
+                        <ion-icon name="home-outline"></ion-icon>Brasilia - DF / Gama Leste
+                    </div>
+                    <div class="personalDate-info fw-b">
+                        <ion-icon name="calendar-outline"></ion-icon>19/12/1999
+                    </div>
+                    <div class="personalDate-info">
+                        <a href="https://api.whatsapp.com/send?phone=5561984847214&text=Ola%20FLavio%2C%20vi%20seu%20curriculo%20e%20estou%20entrando%20em%20contato%20com%20voc%C3%AA%20por%20causa%20de%20uma%20vaga%20de%20emprego!"
+                            target="_blank">
+                            <ion-icon name="logo-whatsapp" size="small"></ion-icon>(61) 9 84847214
+                        </a>
+                    </div>
+                    <div class="personalDate-info">
+                        <ion-icon name="mail-outline" size="small"></ion-icon>flmp.leonardo@gmail.com
+                    </div>
+                </div>
+                <!--REDES SOCIAIS-->
+                <div class="social">
+                    <div class="h5 social-description fw-b">REDES SOCIAIS</div>
+                    <a href="" class="facebook" target="_blank">
+                        <ion-icon name="logo-facebook" size="large"></ion-icon>
+                    </a>
+                    <a href="https://www.linkedin.com/in/flavio-leonardo-ads/" class="linkedin" target="_blank">
+                        <ion-icon name="logo-linkedin" size="large"></ion-icon>
+                    </a>
+                    <a href="https://github.com/LeonardoMachado30" class="github" target="_blank">
+                        <ion-icon name="logo-github" size="large"></ion-icon>
+                    </a>
+                </div>
+                <!--COMPETENCIAS-->
+                <div style="width: 90%;">
+                    <div class="h5 fw-b">COMPETENCIAS</div>
+                    <div id="skills">
+                        <!--JS-->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="infoJobs-container">
+            <div>
+                <div class="h5 fw-b">PERFIL</div>
+                <div>descrição</div>
+            </div>
+            <div>
+                <div class="h5 fw-b">EXPERIENCIA PROFISSIONAL</div>
+                <div id="experience"></div>
+            </div>
+            <div>
+                <div class="h5 fw-b">FORMAÇÃO ACADÊMICA</div>
+                <ul>
+                    <li>Licenciatura em Analise e Desenvolvimento de Sistemas - UNIP - AGO/2019 a JUN/2021</li>
+                </ul>
+            </div>
+            <input type="text" id="function" value="">
+            <input type="text" id="description" value="">
+
+            <a id="btn" class="btn btn-primary">SALVAR</a>
+        </section>
+
+    </main>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> -->
+    <script src="/http/public/api.js"></script>
+
+    <script>
+        // let result = fetch("/api.js")
+        //     .then((resp) => resp.json())
+        //     .then(function (data) {
+        //         let templateHTML = data["experience"].map((item) => {
+        //             return `<div>
+        //                         <input type="hidden" value="${item.id}">
+        //                         <div class="fw-b experience-name">${item.function}</div>
+        //                         <div class="experience-period">${item.dateStart} - ${item.dateEnd}</div>
+        //                         <div>
+        //                             <ul>
+        //                                 <li>${item.description}</li>
+        //                             </ul>
+        //                         </div>
+        //                     </div>`;
+        //         })
+        //         templateHTML = templateHTML.toString().replace(",", " ");
+        //         document.getElementById("experience").innerHTML = templateHTML;
+
+
+        //         for (var i of data["experience"]) {
+        //             if (i.function == "TBR") {
+        //             }
+        //         }
+        //     });
+        // let experience = [];
+
+        // console.log(experience);
+
+        // $("#btn").click(() => {
+        //     experience.push([$("#function").val(), $("#description").val()], ["BNR", "descricaoBEN"])
+
+        //     console.log(experience);
+        // })
+
+        // function escreverArquivo() {
+
+        //     var fso = new ActiveXObject("Scripting.FileSystemObject");
+
+        //     var fh = fso.CreateTextFile("c:Teste.txt", true);
+
+        //     fh.WriteLine("Coloque todo o conteudo que voce deseja nesse trecho...");
+
+        //     fh.Close();
+
+        // }
+
+        // escreverArquivo()
+    </script>
 </body>
+
 </html>
